Give up on Java 8 compatibility, and put module-info files back in
Java 8 compatibility is theoretically possible, but not a reasonable trade-
off in practice. Reasons for this include:

 1. The straightforward way to stay compatible with Java 8 would involve
    Glimpse jars being used as "automatic modules" when used in a Java 9+
    modular setting. Unfortunately, auto-modules apparently must be jars --
    they cannot be classes-directories. This makes it painful to work on
    both Glimpse and dependent projects at the same time.

 2. Current tooling (e.g. Eclipse) just doesn't handle the situation well.
    Errors are surprising, and error messages are confusingly worded. This
    would become a significant time sink.

 3. Auto-modules cannot do "requires transitive" -- so a dependent Jigsaw
    module would have to explicitly require the Glimpse modules AND their
    deps, or else risk errors at runtime.

 4. The way to address #3 involves a third-party Maven plugin (called
    Moditect) that does some unusual things. This is reported to work well
    for the purpose ... but would take us pretty far off the beaten path,
    where we would surely encounter obscure problems in the interactions
    among our various dev tools (even beyond the problems mentioned in #5).

 5. Every Glimpse change would have to be tested three times (Java 8,
    Java 11 on classpath, Java 11 on modulepath).

--- a/extras-dnc/pom.xml
+++ b/extras-dnc/pom.xml
@@ -9,20 +9,6 @@
 
     <artifactId>glimpse-extras-dnc</artifactId>
 
-	<!-- Temporary fix: https://github.com/javaee/jaxb-v2/issues/1168 -->
-    <repositories>
-        <repository>
-            <id>releases.java.net</id>
-            <url>http://maven.java.net/content/repositories/releases/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>jvnet-nexus-staging</id>
-            <url>http://maven.java.net/content/repositories/staging/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-
     <dependencies>
 
         <dependency>
@@ -37,27 +23,23 @@
             <version>0.1.19</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
         <!-- For Vpf2Flat -->
         <dependency>
             <groupId>gov.nasa</groupId>
             <artifactId>worldwind</artifactId>
             <version>2.0.0</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>2.4.0-b180608.0325</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-xjc</artifactId>
-            <version>2.4.0-b180608.0325</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-jxc</artifactId>
-            <version>2.4.0-b180608.0325</version>
         </dependency>
 
     </dependencies>
