--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -73,7 +72,7 @@
         <module>extras-examples</module>
         <module>extras-tinylaf</module>
         <module>extras-topo</module>
-        
+
     </modules>
 
     <properties>
@@ -82,7 +81,6 @@
 
     <build>
         <plugins>
-
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -156,7 +154,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>8</release>
+                    <release>11</release>
                 </configuration>
             </plugin>
 
@@ -225,7 +223,7 @@
                         <include>**/*.gs</include>
                     </includes>
                     <mapping>
-                        <!-- using JAVADOC_STYLE can sometimes cause the 
+                        <!-- using JAVADOC_STYLE can sometimes cause the
                             license header to find its way into the javadocs, so SLASHSTAR_STYLE is used -->
                         <java>SLASHSTAR_STYLE</java>
                         <fs>DOUBLESLASH_STYLE</fs>
@@ -234,8 +232,8 @@
                     </mapping>
                     <excludes>
                         <exclude>target/**</exclude>
-                        <!-- don't put license header on package descriptions. 
-                            If no other javadoc is provided, the first line of the license header ends 
+                        <!-- don't put license header on package descriptions.
+                            If no other javadoc is provided, the first line of the license header ends
                             up in the javadoc. -->
                         <exclude>**/package-info.java</exclude>
                         <!-- these classes have their own license headers -->
@@ -264,7 +262,7 @@
             </plugin>
 
             <plugin>
-                <!-- explicitly define maven-deploy-plugin after other to 
+                <!-- explicitly define maven-deploy-plugin after other to
                     force exec order -->
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
@@ -280,7 +278,7 @@
             </plugin>
 
             <plugin>
-                <!-- explicitly define maven-install-plugin after other to 
+                <!-- explicitly define maven-install-plugin after other to
                     force exec order -->
                 <artifactId>maven-install-plugin</artifactId>
                 <version>2.5.2</version>
@@ -299,7 +297,7 @@
 
         <pluginManagement>
             <plugins>
-                <!--This plugin's configuration is used to store Eclipse 
+                <!--This plugin's configuration is used to store Eclipse
                     m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
