Iron out issues with depending on Jogamp modules
We now depend on "jogl-all" and "gluegen-rt" jars that have been repackaged
to include "Automatic-Module-Name" entries in their manifests. This still
needs to get pushed upstream; that's being tracked in Jogamp Bug 1425. For
now, we depend on the repackaged jars under groupId "com.metsci.ext".

The Jogamp "*-main" jars don't need "Automatic-Module-Name" -- in fact,
those jars are completely empty, and are just dummies attached to poms that
declare Maven dependencies.

The "natives" jars don't need "Automatic-Module-Name" either, because
gluegen accesses them through the filesystem, rather than through the
classloader. (It does use some classloader-based trickery to find the
natives jar files on the filesystem. But then it basically unzips them
into a temp directory, and loads the native libraries from there.)

--- a/text/pom.xml
+++ b/text/pom.xml
@@ -19,13 +19,13 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.metsci.ext.org.jogamp.jogl</groupId>
-			<artifactId>jogl-all</artifactId>
+			<groupId>com.metsci.ext.org.jogamp.gluegen</groupId>
+			<artifactId>gluegen-rt-main</artifactId>
 			<version>2.4.0-rc-20200202</version>
 		</dependency>
 		<dependency>
-			<groupId>com.metsci.ext.org.jogamp.gluegen</groupId>
-			<artifactId>gluegen-rt</artifactId>
+			<groupId>com.metsci.ext.org.jogamp.jogl</groupId>
+			<artifactId>jogl-all-main</artifactId>
 			<version>2.4.0-rc-20200202</version>
 		</dependency>
 	</dependencies>
