--- a/pom.xml
+++ b/pom.xml
@@ -152,9 +152,10 @@
             </plugin>
 
             <plugin>
+                <!-- v3.8.1 breaks our compile, due to https://issues.apache.org/jira/browse/MCOMPILER-322 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <release>11</release>
                 </configuration>
