Change version from CURRENT-SNAPSHOT to 4.0.0-SNAPSHOT, to appease javac
Maven-compiler-plugin, as of version 3.8.1, passes the Maven version to
javac with the --module-version flag. Javac then puts the string through a
set of validation rules, which were rejecting CURRENT-SNAPSHOT, causing the
compile to fail.

That seems pretty harsh, and this initially made me quite grumpy. However,
the original reason we used CURRENT-SNAPSHOT was that version ranges were
buggy (especially in Eclipse), so every time we changed the Glimpse version
we would have to then update the poms of all depent codebases -- which was
a giant pain. But version ranges seem to work fine now (including in
Eclipse), so hopefully this is okay after all.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.metsci.glimpse</groupId>
     <artifactId>glimpse-parent</artifactId>
-    <version>CURRENT-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Glimpse</name>
@@ -152,10 +152,9 @@
             </plugin>
 
             <plugin>
-                <!-- v3.8.1 breaks our compile, due to https://issues.apache.org/jira/browse/MCOMPILER-322 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <release>11</release>
                 </configuration>
