--- a/layers/pom.xml
+++ b/layers/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.metsci.glimpse</groupId>
 		<artifactId>glimpse-parent</artifactId>
-		<version>CURRENT-SNAPSHOT</version>
+		<version>4.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>glimpse-layers</artifactId>
