--- a/assembly/assembly-full/pom.xml
+++ b/assembly/assembly-full/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0-rc01</version>
     </parent>
 
     <artifactId>glimpse-full-assembly</artifactId>
