--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.metsci.glimpse</groupId>
     <artifactId>glimpse-parent</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0-rc01</version>
     <packaging>pom</packaging>
 
     <name>Glimpse</name>
