Take a first stab at Java 8/9+ compatibility
Executes maven-compiler-plugin twice:
 1. Excluding module-info files, targetting Java 8
 2. Including ONLY module-info files, targetting Java 9

The module-info files get compiled to the multi-release destination, which
in this case is META-INF/versions/9/.

This almost works, and feels straightforward and fairly clean. However, it
has two problems:

 1. Maven compiles the first module successfully. But when trying to
    compile the second module's module-info (which refers to the first
    module), it can't find the first module's module-info, and fails with
    "module not found."

 2. In Eclipse, m2e must look for the highest Java release in the pom,
    because the Eclipse project ends up using the Java 9 JDK.

--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,21 @@
                             </rules>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>require-java9</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireJavaVersion>
+                                    <version>[9,)</version>
+                                    <message>Build requires Java 9+ JDK</message>
+                                </requireJavaVersion>
+                            </rules>
+                            <fail>true</fail>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
@@ -156,8 +171,31 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>11</release>
+                    <release>8</release>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <configuration>
+                            <excludes>
+                                <exclude>module-info.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>moduleinfo-compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>9</release>
+                            <multiReleaseOutput>true</multiReleaseOutput>
+                            <includes>
+                                <include>module-info.java</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
