Re-enable multi-release, and include a "Multi-Release" manifest entry
This allows "mvn package" to get past the multi-release dependency issue.
However, "mvn compile" still fails.

And the m2e import is still hopelessly broken. Apparently it wasn't the
multi-release flag that made it almost work before ... because now it
excludes all the source files (except module-info) even though the multi-
release flag is back in there.

--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,7 @@
                         </goals>
                         <configuration>
                             <release>9</release>
+                            <multiReleaseOutput>true</multiReleaseOutput>
                             <includes>
                                 <include>module-info.java</include>
                             </includes>
@@ -238,6 +239,7 @@
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         </manifest>
                         <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
                             <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
                             <SCM-Revision>${mvngit.commit.id}</SCM-Revision>
                         </manifestEntries>
