Try moving module-info files to src/main/java9/
"mvn package" gets past the multi-release dependency issue, but "mvn
compile" still chokes on it.

Eclipse projects end up with Java 9, but at least they don't exclude all
source files.

--- a/pom.xml
+++ b/pom.xml
@@ -176,23 +176,26 @@
                 <executions>
                     <execution>
                         <id>default-compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
                         <configuration>
-                            <excludes>
-                                <exclude>module-info.java</exclude>
-                            </excludes>
+                            <release>8</release>
                         </configuration>
                     </execution>
                     <execution>
                         <id>moduleinfo-compile</id>
+                        <phase>compile</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
                         <configuration>
                             <release>9</release>
                             <multiReleaseOutput>true</multiReleaseOutput>
-                            <includes>
-                                <include>module-info.java</include>
-                            </includes>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
+                            </compileSourceRoots>
                         </configuration>
                     </execution>
                 </executions>
