Try moditect-maven-plugin
Gets "mvn compile" to work, and Eclipse projects are Java 8. But the reason
those work is that everything is treated as pure Java 8 ... which means
there's no build-time check for errors in the module-info files.

Also doesn't add module-info.java to source jars, which is annoying.

My final nit-pick is that the plugin execution block has to be copied to
each pom ... because if the execution block is in the parent pom, the
plugin isn't smart enough to skip the parent module, which fails.

All in all, less appealing than trying to iron out the wrinkles in one of
the earlier approaches.

--- a/extras-examples/pom.xml
+++ b/extras-examples/pom.xml
@@ -10,61 +10,68 @@
     <artifactId>glimpse-extras-examples</artifactId>
 
     <dependencies>
-
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core-examples</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-extras-charts</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-extras-dnc</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-extras-topo</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-docking</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.miglayout</groupId>
             <artifactId>miglayout-swing</artifactId>
             <version>4.2</version>
         </dependency>
-
         <dependency>
             <groupId>com.metsci.ext.swingx</groupId>
             <artifactId>swingx-core-and-plaf</artifactId>
             <version>1.6.5-1</version>
         </dependency>
-
         <dependency>
             <groupId>com.vividsolutions</groupId>
             <artifactId>jts-core</artifactId>
             <version>1.14.0</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.moditect</groupId>
+                <artifactId>moditect-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>add-module-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
