--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,25 +16,21 @@
 			<artifactId>miglayout-core</artifactId>
 			<version>4.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.metsci.glimpse</groupId>
 			<artifactId>glimpse-text</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.metsci.glimpse</groupId>
 			<artifactId>glimpse-platform-fixes</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.metsci.glimpse</groupId>
 			<artifactId>glimpse-util</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
@@ -42,5 +38,22 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.moditect</groupId>
+				<artifactId>moditect-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>add-module-info</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
