--- a/extras-dnc/pom.xml
+++ b/extras-dnc/pom.xml
@@ -10,26 +10,39 @@
     <artifactId>glimpse-extras-dnc</artifactId>
 
     <dependencies>
-
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.metsci.ext.com.kitfox.svg</groupId>
             <artifactId>svg-salamander</artifactId>
             <version>0.1.19</version>
         </dependency>
-
-        <!-- For Vpf2Flat -->
         <dependency>
+            <!-- Used by Vpf2Flat -->
             <groupId>gov.nasa</groupId>
             <artifactId>worldwind</artifactId>
             <version>2.0.0</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.moditect</groupId>
+                <artifactId>moditect-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>add-module-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
